# cherry

./: .gitignore  Cargo - Copy.toml  Cargo.toml  Makefile  README.md  build.rs  config.json  rustfmt.toml
cherry-chess/: Cargo.toml  build.rs  rust-toolchain
cherry-chess/perft/: invalid.sfens
cherry-chess/src/: attacks.rs  byteboard.rs  chess_move.rs  geometry.rs  lib.rs  piece.rs
cherry-chess/src/board/: attacks.rs  builder.rs  mod.rs  move_gen.rs  parse.rs  perft.rs  print.rs  sanity.rs  see.rs  startpos.rs
cherry-chess/src/simd/: avx512.rs  mod.rs
cherry-core/: Cargo.toml  build.rs  rust-toolchain
cherry-core/src/: attacks.rs  bitboard.rs  board.rs  byteboard.rs  castling.rs  chess_move.rs  color.rs  dir.rs  file.rs  geometry.rs  lib.rs  magic.rs  move_gen.rs  moves.rs  mv.rs  perft.rs  piece.rs  rank.rs  square.rs  zobrist.rs
cherry-core/src/board/: builder.rs  is_legal.rs  mod.rs  move_gen.rs  parse.rs  perft.rs  print.rs  see.rs  startpos.rs
cherry-core/src/board/move_gen/: avx2.rs  avx512.rs
cherry-core/src/magic/: common.rs  mod.rs  normal.rs  pext.rs
cherry-core/src/simd/: avx2.rs  avx512.rs  mod.rs
cherry-engine/: Cargo.toml  rust-toolchain
cherry-engine/src/: cherry.rs  engine.rs  main.rs
cherry-engine/src/cherry/: engine.rs  position.rs  score.rs  syzygy.rs  tune.rs  uci.rs  util.rs
cherry-engine/src/cherry/eval/: eval.rs  weights.rs
cherry-engine/src/cherry/nnue/: accumulator.rs  features.rs  layers.rs  network.rs  simd.rs  util.rs
cherry-engine/src/cherry/search/: history.rs  killers.rs  move_picker.rs  search.rs  searcher.rs  time.rs  ttable.rs  weights.rs  window.rs
cherry-engine/src/cherry/tune/: datagen.rs
cherry-types/: Cargo.toml  rust-toolchain
cherry-types/src/: bitboard.rs  color.rs  dir.rs  file.rs  lib.rs  magic.rs  piece.rs  rank.rs  square.rs
cherry-types/src/magic/: common.rs  mod.rs  normal.rs  pext.rs
gungnir-core/: Cargo.toml  build.rs
gungnir-core/src/: attacks.rs  chess_move.rs  lib.rs
gungnir-core/src/board/: builder.rs  mod.rs  move_gen.rs  parse.rs  sanity.rs
gungnir-engine/: Cargo.toml
gungnir-engine/src/: main.rs
gungnir-engine/src/gungnir/: position.rs  syzygy.rs  uci.rs
gungnir-engine/src/gungnir/eval/: eval.rs  (+1 more)
gungnir-types/: Cargo.toml
gungnir-types/src/: file.rs  piece.rs  rank.rs  square.rs
gungnir-types/src/magic/: common.rs  normal.rs
scripts/: download_net.py  ltc.sh  nonreg.sh  nonreg_ltc.sh  nonreg_stc.sh  sprt.sh  sstc.sh  stc.sh  vltc.sh  vstc.sh
src/: cherry.rs  main.rs
src/cherry/: attacks.rs  bench.rs  datagen.rs  engine.rs  eval.rs  eval_consts.rs  eval_weights.rs  history.rs  killers.rs  move_picker.rs  position.rs  score.rs  search.rs  searcher.rs  simd.rs  syzygy.rs  tapered.rs  time.rs  ttable.rs  tune.rs  uci.rs  util.rs  wdl.rs  window.rs
src/cherry/chess/: attacks.rs  byteboard.rs  chess_move.rs  geometry.rs  piece.rs  zobrist.rs
src/cherry/eval/: eval.rs  eval_weights.rs  weights.rs
src/cherry/nnue/: accumulator.rs  features.rs  inference.rs  layers.rs  network.rs  simd.rs  util.rs
src/cherry/search/: history.rs  info.rs  move_picker.rs  search.rs  searcher.rs  time.rs  ttable.rs  weights.rs  window.rs
src/cherry/simd/: avx2.rs  avx512.rs  common.rs  mod.rs
src/cherry/tune/: datagen.rs  tune.rs
src/cherry/util/: command_channel.rs
(+18 files in other folders)
