[package]
name = "cherry"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
datagen = ["chrono", "ctrlc", "rand", "viriformat"]
tune = []

[dependencies]
cherry-core = { path = "cherry-core" }
viriformat = { version = "2.0.0", optional = true }
chrono = { version = "0.4.41", optional = true }
ctrlc = {  version = "3.4.7", optional = true }
rand = { version = "0.9.2", optional = true }
atomic-time = "0.1.5"
pyrrhic-rs = "0.2.0"
smallvec = "1.15.1"
arrayvec = "0.7.6"
colored = "3.0.0"
rayon =  "1.10.0"

[workspace]
resolver = "3"
members = ["cherry-core"]

[profile.release]
debug=true
lto="fat"
codegen-units = 1