[package]
name = "cherry"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
tune = []

[dependencies]
cherry-core = { path = "cherry-core" }
atomic-wait = "1.1.0"
thiserror = "2.0.18"
pyrrhic-rs = "0.2.0"
smallvec = "1.15.1"
arrayvec = "0.7.6"
colored = "3.0.0"
rand = "0.10.0"

[build-dependencies]
cherry-core = { path = "cherry-core" }

[workspace]
resolver = "3"
members = ["cherry-core"]

[profile.release]
debug=true
lto="fat"
codegen-units = 1
