[package]
name = "cherry-engine"
version = "0.1.0"
edition = "2024"

[features]
trace = []
parse = ["dep:pgn-reader"]
tune = ["parse", "trace", "dep:rand", "dep:rand_distr"]
nnue = []

[dependencies]
cherry-core = { version = "0.1.0", path = "../cherry-core" }
cozy-chess = "0.3.4"
arrayvec = "0.7.6"
atomic-time = "0.1.5"
pgn-reader = { version = "0.27.0", optional = true }
rand = { version = "0.9.1", optional = true }
rand_distr = { version = "0.5.1", optional = true }
rayon =  "1.10.0"

[profile.release]
lto="fat"
codegen-units = 1