[package]
name = "cherry"
version = "0.1.0"
edition = "2024"

[features]
tune = ["dep:bullet", "nnue"]
tune-hip = ["tune", "bullet/hip"]
nnue = []

[dependencies]
cherry-core = { path = "../cherry-core" }
bullet = { git = "https://github.com/jw1912/bullet", package = "bullet_lib", optional = true }
pyrrhic-rs = "0.2.0"
indexmap = "2.10.0"
arrayvec = "0.7.6"
atomic-time = "0.1.5"
rayon =  "1.10.0"