[package]
name = "cherry"
version = "0.1.0"
edition = "2024"

[features]
tune = ["dep:bullet", "nnue"]
tune-hip = ["tune", "bullet/hip"]
nnue = []

[dependencies]
cherry-core = { path = "../cherry-core" }
bullet = { git = "https://github.com/jw1912/bullet", package = "bullet_lib", optional = true }
atomic-time = "0.1.5"
pyrrhic-rs = "0.2.0"
arrayvec = "0.7.6"
rayon =  "1.10.0"